--- a/Teraoka/Controllers/EnterLicenseController/EnterLicenseController.xib
+++ b/Teraoka/Controllers/EnterLicenseController/EnterLicenseController.xib
@@ -33,59 +33,85 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_home" translatesAutoresizingMaskIntoConstraints="NO" id="dq8-JY-KBR">
                     <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DELIOUS SELF ORDER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hN-2a-jZr">
-                    <rect key="frame" x="520" y="318.5" width="327" height="38.5"/>
-                    <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="32"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your license key." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDC-6e-kCf">
-                    <rect key="frame" x="525" y="427" width="316" height="30"/>
-                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="25"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w3q-9o-QLo">
-                    <rect key="frame" x="493" y="487" width="380" height="70"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sP1-o3-NuQ">
+                    <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7oP-L1-b6B">
+                            <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your license key." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDC-6e-kCf">
+                                    <rect key="frame" x="525" y="417" width="316" height="30"/>
+                                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="25"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w3q-9o-QLo">
+                                    <rect key="frame" x="493" y="477" width="380" height="70"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="380" id="9vW-wT-h28"/>
+                                        <constraint firstAttribute="height" constant="70" id="i2L-q3-br2"/>
+                                    </constraints>
+                                    <viewLayoutGuide key="safeArea" id="YOw-3q-ElL"/>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="28"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7xi-p7-az9">
+                                    <rect key="frame" x="536" y="577" width="294" height="70"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="7xi-p7-az9" secondAttribute="height" multiplier="610:145" id="ePN-IR-DTp"/>
+                                        <constraint firstAttribute="height" constant="70" id="jvI-Nb-gG3"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
+                                    <state key="normal" title="SUBMIT" backgroundImage="submit_btn">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="submitAction:" destination="-1" eventType="touchUpInside" id="v7q-6j-iA7"/>
+                                    </connections>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DELIOUS SELF ORDER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hN-2a-jZr">
+                                    <rect key="frame" x="519.5" y="328.5" width="327" height="38.5"/>
+                                    <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="32"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="w3q-9o-QLo" firstAttribute="centerX" secondItem="7oP-L1-b6B" secondAttribute="centerX" id="Bfa-CU-NYB"/>
+                                <constraint firstItem="7xi-p7-az9" firstAttribute="centerX" secondItem="7oP-L1-b6B" secondAttribute="centerX" id="MNU-13-EaA"/>
+                                <constraint firstItem="w3q-9o-QLo" firstAttribute="top" secondItem="FDC-6e-kCf" secondAttribute="bottom" constant="30" id="SIx-Vv-rpJ"/>
+                                <constraint firstItem="FDC-6e-kCf" firstAttribute="top" secondItem="7hN-2a-jZr" secondAttribute="bottom" constant="50" id="ZLW-px-eri"/>
+                                <constraint firstItem="7xi-p7-az9" firstAttribute="top" secondItem="w3q-9o-QLo" secondAttribute="bottom" constant="30" id="bxH-DA-cTh"/>
+                                <constraint firstItem="7hN-2a-jZr" firstAttribute="centerX" secondItem="7oP-L1-b6B" secondAttribute="centerX" id="gOj-Td-6Hc"/>
+                                <constraint firstItem="FDC-6e-kCf" firstAttribute="centerX" secondItem="7oP-L1-b6B" secondAttribute="centerX" id="jZD-kV-Sel"/>
+                                <constraint firstItem="w3q-9o-QLo" firstAttribute="centerY" secondItem="7oP-L1-b6B" secondAttribute="centerY" id="s5g-G3-y6g"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="380" id="HI1-u1-a5Z"/>
-                        <constraint firstAttribute="height" constant="70" id="M4g-02-2CE"/>
+                        <constraint firstAttribute="bottom" secondItem="7oP-L1-b6B" secondAttribute="bottom" id="EoR-so-FsO"/>
+                        <constraint firstItem="7oP-L1-b6B" firstAttribute="height" secondItem="sP1-o3-NuQ" secondAttribute="height" id="QiS-NY-eYd"/>
+                        <constraint firstItem="7oP-L1-b6B" firstAttribute="width" secondItem="sP1-o3-NuQ" secondAttribute="width" id="RDW-p1-aO8"/>
+                        <constraint firstItem="7oP-L1-b6B" firstAttribute="leading" secondItem="sP1-o3-NuQ" secondAttribute="leading" id="Zvj-Ko-hJK"/>
+                        <constraint firstItem="7oP-L1-b6B" firstAttribute="top" secondItem="sP1-o3-NuQ" secondAttribute="top" id="aoS-eA-NoN"/>
+                        <constraint firstAttribute="trailing" secondItem="7oP-L1-b6B" secondAttribute="trailing" id="xP3-VD-3JZ"/>
                     </constraints>
-                    <viewLayoutGuide key="safeArea" id="YOw-3q-ElL"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="28"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7xi-p7-az9">
-                    <rect key="frame" x="536" y="577" width="294" height="70"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="70" id="YLd-xF-adz"/>
-                        <constraint firstAttribute="width" secondItem="7xi-p7-az9" secondAttribute="height" multiplier="610:145" id="ZPw-1X-2SJ"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
-                    <state key="normal" title="SUBMIT" backgroundImage="submit_btn">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                    <connections>
-                        <action selector="submitAction:" destination="-1" eventType="touchUpInside" id="v7q-6j-iA7"/>
-                    </connections>
-                </button>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="7hN-2a-jZr" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="2Kd-Cu-iuK"/>
                 <constraint firstAttribute="trailing" secondItem="dq8-JY-KBR" secondAttribute="trailing" id="3Cn-W2-gUy"/>
+                <constraint firstItem="sP1-o3-NuQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="B80-8C-Ike"/>
                 <constraint firstItem="dq8-JY-KBR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="EHX-q8-nUS"/>
-                <constraint firstItem="w3q-9o-QLo" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="JII-iU-Wah"/>
-                <constraint firstItem="7xi-p7-az9" firstAttribute="top" secondItem="w3q-9o-QLo" secondAttribute="bottom" constant="20" id="Jbu-ey-RKq"/>
                 <constraint firstItem="dq8-JY-KBR" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="MGP-9R-1xC"/>
-                <constraint firstItem="w3q-9o-QLo" firstAttribute="centerY" secondItem="Q5M-cg-NOt" secondAttribute="centerY" id="QNV-fD-4Ed"/>
+                <constraint firstAttribute="trailing" secondItem="sP1-o3-NuQ" secondAttribute="trailing" id="Rou-zp-BEl"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="dq8-JY-KBR" secondAttribute="bottom" id="Zvv-wB-Apo"/>
-                <constraint firstItem="FDC-6e-kCf" firstAttribute="top" secondItem="7hN-2a-jZr" secondAttribute="bottom" constant="70" id="a7n-f7-Hsw"/>
-                <constraint firstItem="FDC-6e-kCf" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="bLJ-Oq-zny"/>
-                <constraint firstItem="7xi-p7-az9" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="fXy-06-5ak"/>
-                <constraint firstItem="w3q-9o-QLo" firstAttribute="top" secondItem="FDC-6e-kCf" secondAttribute="bottom" constant="30" id="heC-3u-ihy"/>
+                <constraint firstAttribute="bottom" secondItem="sP1-o3-NuQ" secondAttribute="bottom" id="cGL-iW-Whu"/>
+                <constraint firstItem="sP1-o3-NuQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="scK-ft-6t1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
