--- a/Teraoka/Views/Cell/CategoryCollectionCell/CategoryCollectionCell.xib
+++ b/Teraoka/Views/Cell/CategoryCollectionCell/CategoryCollectionCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,8 +24,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="175" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CATEGORY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ge-Gy-Deo">
-                        <rect key="frame" x="37" y="8" width="100.5" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CATEGORY" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ge-Gy-Deo">
+                        <rect key="frame" x="5" y="8" width="165" height="24"/>
                         <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="20"/>
                         <color key="textColor" red="0.3529411764705882" green="0.3529411764705882" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -40,8 +40,10 @@
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="6Ge-Gy-Deo" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="1vF-Jy-5qV"/>
                 <constraint firstItem="6Ge-Gy-Deo" firstAttribute="centerY" secondItem="SEy-5g-ep8" secondAttribute="centerY" constant="-5" id="A7q-80-U6U"/>
                 <constraint firstItem="4kx-zY-06e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="BYU-5J-0aM"/>
+                <constraint firstAttribute="trailing" secondItem="6Ge-Gy-Deo" secondAttribute="trailing" constant="5" id="STT-jf-oby"/>
                 <constraint firstAttribute="trailing" secondItem="4kx-zY-06e" secondAttribute="trailing" id="VRN-ZA-p5U"/>
                 <constraint firstItem="6Ge-Gy-Deo" firstAttribute="centerX" secondItem="SEy-5g-ep8" secondAttribute="centerX" id="g7y-c1-l3l"/>
                 <constraint firstAttribute="bottom" secondItem="4kx-zY-06e" secondAttribute="bottom" id="tPj-sW-Dfc"/>
