--- a/Teraoka/Views/TableSelectionView/TableSelectionView.xib
+++ b/Teraoka/Views/TableSelectionView/TableSelectionView.xib
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-UI-Display-Regular.otf">
+            <string>SFUIDisplay-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,20 +22,33 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y7P-Ki-X8W">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="296"/>
+                    <rect key="frame" x="0.0" y="60" width="375" height="236"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="J9j-Gq-eDp">
+                    <rect key="frame" x="62.5" y="10" width="250" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="0fD-qb-ol5"/>
+                        <constraint firstAttribute="width" constant="250" id="6wM-Ij-fwI"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="17"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="y7P-Ki-X8W" secondAttribute="bottom" id="1tU-qs-lk1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="y7P-Ki-X8W" secondAttribute="trailing" id="9vR-cW-Yn4"/>
-                <constraint firstItem="y7P-Ki-X8W" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="UWn-4c-NIz"/>
+                <constraint firstItem="J9j-Gq-eDp" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="ehi-5r-HoI"/>
+                <constraint firstItem="y7P-Ki-X8W" firstAttribute="top" secondItem="J9j-Gq-eDp" secondAttribute="bottom" constant="10" id="fbk-DM-Tbj"/>
+                <constraint firstItem="J9j-Gq-eDp" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="iHT-Go-ana"/>
                 <constraint firstItem="y7P-Ki-X8W" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="xaJ-Vn-f2V"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="searchTf" destination="J9j-Gq-eDp" id="cZo-TX-UlR"/>
                 <outlet property="tblView" destination="y7P-Ki-X8W" id="o6o-1w-sdP"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="-132"/>
